--- a/apitestsys/apitest/templates/commisson_list.html
+++ b/apitestsys/apitest/templates/commisson_list.html
@@ -36,7 +36,7 @@
                             </td>
                             <td>
                                 <button type="button" class="btn btn-warning" onclick="window.location='/reportDetail/'">
-                                    查看报告
+                                    测试报告详情
                                 </button>
                             </td>
                         </tr>
