--- a/apitestsys/apitest/templates/testcase_list.html
+++ b/apitestsys/apitest/templates/testcase_list.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 {% block main_content %}
     <main class="main">
-    <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/index/">首页</a></li>
-                <li class="breadcrumb-item"><a href="/projectList/">项目列表</a></li>
-                <li class="breadcrumb-item"> <a href="/interfaceList/">接口列表</a></li>
-                <li class="breadcrumb-item active">用例列表</li>
-            </ol>
+    <div class="card-block">
+                <button type="button" class="btn btn-primary" onclick="window.location='/addCase/'">新增用例</button>
+            </div>
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
