--- a/apitestsys/apitest/templates/project_list.html
+++ b/apitestsys/apitest/templates/project_list.html
@@ -12,39 +12,94 @@
                     <i class="fa fa-align-justify"></i> 项目列表
                 </div>
                 <div class="card-block ">
-                    <table class="table table-condensed">
-                        <thead>
-                        <tr >
-                            <th class="text-center">项目名称</th>
-                            <th class="text-center">服务器ip或地址</th>
-                            <th class="text-center">数据库地址</th>
-                            <th class="text-center">邮件开启状态</th>
-                            <th class="text-center">操作</th>
-                        </tr>
-                        </thead>
-                        <tbody id="tb-project-list">
-
-                        </tbody>
-                    </table>
-                    <nav class="">
-                        <ul class="pagination" >
-                            <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                        </ul>
-                    </nav>
+                    <table class="" id="tb_project_list"></table>
                 </div>
             </div>
         </div>
     </div>
         <script src="../static/assets/js/libs/jquery.min.js"></script>
+        <!--Bootstrap table scripts -->
+        <script src="../static/assets/js/libs/bootstrap-table.js"></script>
+        <script src="../static/assets/js/libs/bootstrap-table-zh-CN.js"></script>
         <script>
-            $(document).ready(function ($) {
-                get_project_list()
-            })
+            $(function () {
+                //1.初始化Table
+                var oTable = new TableInit();
+                oTable.Init();
+                //2.初始化Button的点击事件
+                var oButtonInit = new ButtonInit();
+                oButtonInit.Init();
+
+            });
+            var TableInit = function () {
+                var oTableInit = new Object();
+                //初始化Table
+                oTableInit.Init = function () {
+                    $('#tb_project_list').bootstrapTable({
+                        url: '/get_project_list/',         //请求后台的URL（*）
+                        method: 'get',                      //请求方式（*）
+                        //toolbar: '#toolbar',                //工具按钮用哪个容器
+                        striped: false,                      //是否显示行间隔色
+                        cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+                        pagination: true,                   //是否显示分页（*）
+                        sortable: true,                    //是否启用排序
+                        sortOrder: "asc",                   //排序方式
+                        queryParams: oTableInit.queryParams,//传递参数（*）
+                        sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
+                        pageNumber:1,                       //初始化加载第一页，默认第一页
+                        pageSize: 10,                       //每页的记录行数（*）
+                        pageList: [10, 25, 50, 100],        //可供选择的每页的行数（*）
+                        search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+                        strictSearch: true,
+                        showColumns: false,                     //是否显示所有的列
+                        showRefresh: true,                      //是否显示刷新按钮
+                        minimumCountColumns: 2,                //最少允许的列数
+                        clickToSelect: false,                //是否启用点击选中行
+                        height: "400",                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+                        uniqueId: "ID",                         //每一行的唯一标识，一般为主键列
+                        showToggle:false,                    //是否显示详细视图和列表视图的切换按钮
+                        cardView: false,                    //是否显示详细视图
+                        detailView: false,                   //是否显示父子表
+                        columns: [ {
+                            field: 'project_name',
+                            title: '项目名称'
+                        }, {
+                            field: 'env_ip',
+                            title: '服务器ip或地址'
+                        }, {
+                            field: 'db_ip',
+                            title: '数据库地址'
+                        }, {
+                            field: 'email_switch',
+                            title: '邮件开启状态'
+                        },  {
+                            field: 'Op',
+                            title: '操作'
+                        }
+                        ]
+                    });
+                };
+
+                //得到查询的参数
+                oTableInit.queryParams = function (params) {
+                    var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                        limit: params.limit,   //页面大小
+                        offset: params.offset  //页码
+                    };
+                    return temp;
+                };
+                return oTableInit;
+            };
+            var ButtonInit = function () {
+                var oInit = new Object();
+                var postdata = {};
+
+                oInit.Init = function () {
+                    //初始化页面上面的按钮事件
+
+                };
+                return oInit;
+            };
         </script>
 
     </main>
